<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="333dp"
        android:layout_height="246dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="303dp"
        android:layout_height="28dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/save_the_world_with_this_simple_step"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="60dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:fontFamily="serif"
        android:onClick="biodegradable"
        android:text="@string/biodegradable"
        android:textAppearance="@android:style/TextAppearance.Widget"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button4"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="98dp"
        android:layout_height="43dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="42dp"
        android:fontFamily="serif"
        android:onClick="nonbio"
        android:text="Non-Bio"
        android:textAppearance="@android:style/TextAppearance.Widget.Button"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button5"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="80dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="42dp"
        android:fontFamily="serif"
        android:onClick="creators"
        android:text="@string/creators"
        android:textAppearance="@android:style/TextAppearance.Widget.Button"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button6"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="74dp"
        android:layout_height="43dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="42dp"
        android:fontFamily="serif"
        android:onClick="recyclable"
        android:text="@string/recyclable"
        android:textAppearance="@android:style/TextAppearance.Widget.Button"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="84dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:onClick="exit"
        android:text="Exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

</android.support.constraint.ConstraintLayout>